Bug 477241 - Non-fullscreen videos don't inhibit the screen, making powerdevil turn off the screen after a few seconds on mobile
Summary: Non-fullscreen videos don't inhibit the screen, making powerdevil turn off th...
Status: RESOLVED FIXED
Alias: None
Product: PlasmaTube
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Linus Jahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-19 16:19 UTC by Bart Ribbers
Modified: 2023-12-09 17:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2023-11-19 16:19:08 UTC
I don't always watch videos fullscreen but when I don't Plasmatube doesn't tell powerdevil to keep the device awake which causes it to turn off the screen after half a minute or so. This doesn't happen when the video is in fullscreen mode.
Comment 1 Joshua Goins 2023-12-09 17:11:47 UTC
Git commit 7ab4b8c99b8f06f2dfdbdd7d982bb5b0171fdce0 by Joshua Goins.
Committed on 09/12/2023 at 18:05.
Pushed by redstrate into branch 'master'.

Set screensaver inhibition when always playing a video

Instead of it only happening when fullscreen.

M  +0    -35   src/controllers/plasmatube.cpp
M  +0    -2    src/controllers/plasmatube.h
M  +39   -0    src/controllers/videocontroller.cpp
M  +1    -0    src/controllers/videocontroller.h
M  +0    -2    src/ui/videoplayer/VideoPlayer.qml

https://invent.kde.org/multimedia/plasmatube/-/commit/7ab4b8c99b8f06f2dfdbdd7d982bb5b0171fdce0