Set screensaver inhibition when always playing a video

Instead of it only happening when fullscreen.

BUG: 477241